<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.LoginFragment">

 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:fillViewport="true"
     android:gravity="center"
     android:layout_marginTop="16dp">

     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="2dp"
         android:text="@string/app_name"
         android:gravity="center"
         android:textSize="26sp"
         android:textColor="@color/white">
     </TextView>

     <ImageView
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:layout_gravity="center"
         android:src="@drawable/baseline_logo">
     </ImageView>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/e_mail"
         android:layout_marginStart="5dp"
         android:textColor="@color/white"
         android:textSize="20sp">
     </TextView>

     <EditText
         android:id="@+id/edit_email"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_edit"
         android:hint="@string/emai_email_com_hint"
         android:inputType="textEmailAddress"
         android:padding="14dp"
         android:textSize="14sp"></EditText>

     <TextView

         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/senha"
         android:layout_marginStart="5dp"
         android:textColor="@color/white"
         android:textSize="20sp"
         android:layout_marginTop="16dp">
     </TextView>

     <EditText
         android:id="@+id/edit_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="6dp"
         android:layout_marginTop="8dp"
         android:background="@drawable/bg_edit"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
         android:padding="14dp"
         android:textSize="14sp" />

     <Button
         android:id="@+id/btn_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:layout_marginTop="6dp"
         android:background="@drawable/bg_login_button"
         android:text="@string/login"
         android:textColor="@color/primary_color"
         android:textSize="18sp"
         app:backgroundTint="@null">

     </Button>

     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content">

         <TextView
             android:id="@+id/btn_register"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:text="@string/criar_conta"
             android:layout_marginStart="20dp"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent">
         </TextView>

         <TextView
             android:id="@+id/btn_recover"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_marginEnd="20dp"
             android:text="@string/recuperar_conta"
             android:textColor="@color/white"
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/btn_register">

         </TextView>
     </androidx.constraintlayout.widget.ConstraintLayout>

     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:visibility="invisible"
         tools:visibility="visible"
         android:indeterminateTint="@color/white">
     </ProgressBar>
 </LinearLayout>

</ScrollView>